# wasmose

./: Cargo.toml  README.md  example.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/spec/: Cargo.toml
crates/spec/src/: lib.rs
crates/wasmedge-shim/: Cargo.toml
crates/wasmedge-shim/src/: main.rs
crates/wasmtime-shim/: Cargo.toml
crates/wasmtime-shim/src/: main.rs
fs/: Cargo.toml  Makefile
fs/src/: main.rs
